examples/test/testpolicy2606.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2606
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key42: value48
      key48: value2
      key47: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value47
          key10: value21
      podSelector:
        matchLabels:
          key31: value25
